# azure-autonomous-network-demo

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  azure.yaml  azure_config.env.template  check_status.py  deploy.sh  deploy_app.sh  nginx.conf  populate_fabric_config.py  provision_eventhouse.py  provision_fabric.py  provision_lakehouse.py  provision_ontology.py  pyproject.toml  test_orchestrator.py
api/: Dockerfile  pyproject.toml  requirements.txt  startup.sh
api/agents/: orchestrator.yaml
api/app/: agent_ids.py  agent_loader.py  cosmos_helpers.py  dispatch.py  fabric_discovery.py  gq_config.py  log_broadcaster.py  main.py  orchestrator.py  paths.py  session_manager.py  sessions.py  streaming.py
api/app/adapters/: __init__.py  fabric_config.py
api/app/backends/: __init__.py  fabric.py  fabric_kql.py  fabric_throttle.py  mock.py
api/app/backends/fixtures/: topology.json
api/app/mcp/: server.py
api/app/routers/: agents.py  alert.py  config.py  data_sessions.py  fabric_provision.py  graph_backend.py  health.py  interactions.py  logs.py  replay.py  search.py  sessions.py  telemetry_backend.py  topology.py  upload_jobs.py
api/app/stores/: __init__.py  cosmos_nosql.py
api/app/tools/: __init__.py  dispatch.py  graph.py  search.py  telemetry.py
api/static/: index.html
api/static/assets/: index-BsoIEQ8R.js  index-DDEtGnx4.css  index-tluQfXzu.js
fabric-query-api/: Dockerfile  config.py  main.py  openapi.yaml  pyproject.toml  router_graph.py  router_telemetry.py
fabric-query-api/backends/: cosmosdb.py  fabric.py  mock.py
fabric-query-api/openapi/: cosmosdb.yaml  fabric.yaml  mock.yaml
fabricdemo/: .dockerignore  .gitignore  Dockerfile  README.md  architecture_graph.json  azure.yaml  azure_config.env.template  deploy.sh  pyproject.toml
fabricdemo/.github/: copilot-instructions.md
fabricdemo/api/: Dockerfile  pyproject.toml
fabricdemo/api/app/: agent_ids.py  dispatch.py  main.py  orchestrator.py  session_manager.py  sessions.py
fabricdemo/api/app/routers/: agents.py  alert.py  config.py  fabric_provision.py  logs.py  sessions.py  upload_jobs.py
fabricdemo/custom_skills/graph-data-scenarios/references/: complete-examples.md  convention-contract.md  graph-schema-format.md  prompt-fragments.md  telemetry-patterns.md  topology-patterns.md
fabricdemo/custom_skills/react-force-graph-2d/references/: acceptance-criteria.md  core-patterns.md
fabricdemo/data/: validate_scenario.py
fabricdemo/data/scenarios/hello-world/: graph_schema.yaml  scenario.yaml
fabricdemo/data/scenarios/telco-backbone/: graph_schema.yaml  (+1 more)
fabricdemo/documentation/: CUSTOM_SKILLS.md  NEWSCENARIO_PHASE1.md  NEWSCENARIO_PHASE3.md  NEWSCENARIO_PHASE5.md  V12newscenario.md  cleaning.md  dead_cleanup.md  decoupling.md  old_ways.md  old_ways_setup.md  persistent.md  story1.md  story2.md  v11e.md  v11e2.md  v11fabricv3.md  v11fabricv3_old.md  v11fabricv3_old2.md  v12QOL.md  v13QOL.md  v15scenarioimprovmeents.md  v17QOL.md  v17QOL_requirements.md  v18_refine.md
fabricdemo/documentation/architecture/: deployment.md  error-resilience.md  frontend-architecture.md  scenario-management.md  troubleshooting.md
fabricdemo/documentation/completed/: NUKECOSMOS.md  curtains.md  decoupling.md.bak  v11a-upload-button.md  v11e3.md  v11refactor.md
fabricdemo/fabric_implementation_references/: azure_config.env.template
fabricdemo/fabric_implementation_references/custom_skills/: SKILL.md
fabricdemo/fabric_implementation_references/documentation/: SCENARIO.md
fabricdemo/fabric_implementation_references/graph-query-api/: config.py  models.py
fabricdemo/fabric_implementation_references/scripts/: create_runbook_indexer.py
fabricdemo/frontend/: Dockerfile  index.html  tailwind.config.js  tsconfig.tsbuildinfo
fabricdemo/frontend/src/: App.tsx  ScenarioContext.tsx  config.ts  main.tsx
fabricdemo/graph-query-api/: config.py  cosmos_helpers.py  fabric_discovery.py  log_broadcaster.py  main.py  models.py  prompt_helpers.py  pyproject.toml  router_docs.py  router_fabric_discovery.py  router_graph.py  router_health.py  router_interactions.py  router_prompts.py  router_scenarios.py  router_search.py  router_telemetry.py  router_topology.py  search_indexer.py
fabricdemo/graph-query-api/adapters/: cosmos_config.py  fabric_config.py
fabricdemo/graph-query-api/backends/: __init__.py  fabric.py  fabric_kql.py
fabricdemo/graph-query-api/ingest/: __init__.py  graph_ingest.py  manifest.py  prompt_ingest.py  telemetry_ingest.py
fabricdemo/graph-query-api/openapi/: mock.yaml
fabricdemo/graph-query-api/services/: __init__.py  blob_uploader.py
fabricdemo/hooks/: postprovision.sh  preprovision.sh
fabricdemo/infra/: main.bicep  main.bicepparam  nuclear_teardown.sh
fabricdemo/infra/modules/: roles.bicep  vnet.bicep
fabricdemo/scripts/: agent_provisioner.py  generate_topology_json.py  provision_agents.py  provision_cosmos.py  provision_search_index.py
fabricdemo/scripts/fabric/: _config.py  assign_fabric_role.py  populate_fabric_config.py  provision_eventhouse.py  provision_lakehouse.py  provision_ontology.py  provision_workspace.py
fabricdemo/scripts/testing_scripts/: test_graph_query_api.py  test_orchestrator.py
graph-query-api/: .gitignore  Dockerfile  config.py  config_store.py  cosmos_helpers.py  fabric_discovery.py  main.py  models.py  pyproject.toml  router_fabric_connections.py  router_fabric_discovery.py  router_graph.py  router_health.py  router_ingest.py  router_interactions.py  router_prompts.py  router_replay.py  router_scenarios.py  router_sessions.py  router_telemetry.py  router_topology.py  search_indexer.py  sse_helpers.py
graph-query-api/adapters/: cosmos_config.py  fabric_config.py
graph-query-api/backends/: __init__.py  cosmosdb.py  fabric.py  fabric_kql.py  mock.py
graph-query-api/ingest/: __init__.py  arm_helpers.py  graph_ingest.py  prompt_ingest.py  scenarios.py
graph-query-api/openapi/: cosmosdb.yaml  fabric.yaml  mock.yaml
graph-query-api/openapi/templates/: telemetry.yaml
graph-query-api/stores/: cosmos_nosql.py  mock_store.py
(+758 files in other folders)
